--- a/index.html
+++ b/index.html
@@ -7,29 +7,14 @@
     <style>
       #menu {
         position: fixed;
-        bottom: 5px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.7);
-        padding: 10px 20px;
-        border-radius: 15px;
-        color: white;
-        font-family: sans-serif;
-        z-index: 999;
-        text-align: center;
-        width: 80%;
-        max-width: 400px;
-        display: none;
+        bottom: 5px; left: 50%; transform: translateX(-50%);
+        background: rgba(0, 0, 0, 0.7); padding: 10px 20px; border-radius: 15px;
+        color: white; font-family: sans-serif; z-index: 999; text-align: center;
+        width: 80%; max-width: 400px; display: none;
       }
       #menu button {
-        margin: 5px;
-        padding: 8px 15px;
-        border: none;
-        border-radius: 10px;
-        background: #1e90ff;
-        color: white;
-        font-weight: bold;
-        cursor: pointer;
+        margin: 5px; padding: 8px 15px; border: none; border-radius: 10px;
+        background: #1e90ff; color: white; font-weight: bold; cursor: pointer;
       }
       #menu button:hover { background: #4682b4; }
       #fact-box { margin-top: 10px; font-size: 14px; }
@@ -58,11 +43,13 @@
     </style>
   </head>
   <body>
+    <!-- Mensaje escaneo -->
     <div id="scan-message">
       Apunta tu cámara hacia las imágenes para comenzar
       <img id="scan-image" src="./Ballena3.png" alt="Target a escanear">
     </div>
 
+    <!-- Menú de curiosidades -->
     <div id="menu">
       <div id="fact-box">Selecciona un animal para ver curiosidades</div>
       <div>
@@ -71,21 +58,24 @@
       </div>
     </div>
 
+    <!-- Controles -->
     <div id="controls">
       <button id="btnStart">▶️ Start</button>
       <button id="btnPause">⏸ Pause</button>
       <button id="btnStop">⏹ Stop</button>
     </div>
 
+    <!-- Botones para cambiar modelos -->
     <div id="model-switch"></div>
 
+    <!-- Escena AR -->
     <a-scene
       mindar-image="imageTargetSrc: ./targets.mind; maxTrack: 2"
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
       vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: false"
-    >
+      device-orientation-permission-ui="enabled: false">
+
       <a-assets>
         <!-- Ballenas -->
         <a-asset-item id="WhaleModel1" src="./WhaleO1.glb"></a-asset-item>
@@ -99,13 +89,12 @@
 
       <!-- Ballena -->
       <a-entity id="target-whale" mindar-image-target="targetIndex: 0">
-        <a-entity id="ballenaModel1" gltf-model="#WhaleModel1" 
+        <a-entity id="ballenaModel1" gltf-model="#WhaleModel1"
           position="0 .2 0" rotation="0 90 0" scale="0.9 0.9 0.9" visible="true"
           animation__updown="property: position; dir:alternate; loop:true; dur:2000; easing:easeInOutSine; to: 0 0.4 0"
           animation__spin="property: rotation; to: 0 450 0; dur:6000; loop:true; easing:linear">
         </a-entity>
-
-        <a-entity id="ballenaModel2" gltf-model="#WhaleModel2" 
+        <a-entity id="ballenaModel2" gltf-model="#WhaleModel2"
           position="0 -0.3 0" rotation="0 90 0" scale="0.03 0.03 0.03" visible="false"
           animation__updown="property: position; dir:alternate; loop:true; dur:2000; easing:easeInOutSine; to: 0 -0.1 0"
           animation__spin="property: rotation; to: 0 450 0; dur:6000; loop:true; easing:linear">
@@ -114,13 +103,12 @@
 
       <!-- Pulpo -->
       <a-entity id="target-octopus" mindar-image-target="targetIndex: 1">
-        <a-entity id="pulpoModel1" gltf-model="#OctopusModel1" 
+        <a-entity id="pulpoModel1" gltf-model="#OctopusModel1"
           position="0 -0.25 0" rotation="0 90 0" scale="0.05 0.05 0.05" visible="true"
           animation__updown="property: position; dir:alternate; loop:true; dur:2500; easing:easeInOutSine; to: 0 -0.05 0"
           animation__spin="property: rotation; to: 0 450 0; dur:8000; loop:true; easing:linear">
         </a-entity>
-
-        <a-entity id="pulpoModel2" gltf-model="#OctopusModel2" 
+        <a-entity id="pulpoModel2" gltf-model="#OctopusModel2"
           position="0 -0.4 0" rotation="0 90 0" scale="0.07 0.07 0.07" visible="false"
           animation__updown="property: position; dir:alternate; loop:true; dur:2500; easing:easeInOutSine; to: 0 -0.2 0"
           animation__spin="property: rotation; to: 0 450 0; dur:8000; loop:true; easing:linear">
@@ -134,14 +122,8 @@
       const scanMessage = document.querySelector("#scan-message");
       const modelSwitch = document.querySelector("#model-switch");
 
-      const whaleModels = [
-        document.querySelector("#ballenaModel1"),
-        document.querySelector("#ballenaModel2")
-      ];
-      const octopusModels = [
-        document.querySelector("#pulpoModel1"),
-        document.querySelector("#pulpoModel2")
-      ];
+      const whaleModels = [document.querySelector("#ballenaModel1"), document.querySelector("#ballenaModel2")];
+      const octopusModels = [document.querySelector("#pulpoModel1"), document.querySelector("#pulpoModel2")];
 
       const facts = {
         whale: [
@@ -158,49 +140,45 @@
 
       let currentAnimal = null;
       let factIndex = 0;
-      let whaleDetected = false;
-      let octopusDetected = false;
 
       function showFact() { if(currentAnimal) factBox.innerText = facts[currentAnimal][factIndex]; }
 
-      function updateMenuVisibility() {
-        if ((whaleDetected && !octopusDetected) || (!whaleDetected && octopusDetected)) {
-          menu.style.display = "block"; scanMessage.style.display = "none";
-          if (whaleDetected) {
-            modelSwitch.innerHTML = `
-              <button onclick="switchWhaleModel(0)">Ballena 1</button>
-              <button onclick="switchWhaleModel(1)">Ballena 2</button>
-            `;
-            modelSwitch.style.display = "flex";
-          } else if (octopusDetected) {
-            modelSwitch.innerHTML = `
-              <button onclick="switchOctopusModel(0)">Pulpo 1</button>
-              <button onclick="switchOctopusModel(1)">Pulpo 2</button>
-            `;
-            modelSwitch.style.display = "flex";
-          }
-        } else { menu.style.display = "none"; modelSwitch.style.display = "none"; 
-          if(!whaleDetected && !octopusDetected) scanMessage.style.display = "block"; }
+      function updateUIForAnimal(animal) {
+        menu.style.display = "block";
+        scanMessage.style.display = "none";
+        if (animal === "whale") {
+          modelSwitch.innerHTML = `
+            <button onclick="switchWhaleModel(0)">Ballena 1</button>
+            <button onclick="switchWhaleModel(1)">Ballena 2</button>`;
+        } else if (animal === "octopus") {
+          modelSwitch.innerHTML = `
+            <button onclick="switchOctopusModel(0)">Pulpo 1</button>
+            <button onclick="switchOctopusModel(1)">Pulpo 2</button>`;
+        }
+        modelSwitch.style.display = "flex";
+      }
+
+      function hideUI() {
+        menu.style.display = "none";
+        modelSwitch.style.display = "none";
+        scanMessage.style.display = "block";
       }
 
       window.switchWhaleModel = (index) => whaleModels.forEach((m,i)=>m.setAttribute("visible", i===index));
       window.switchOctopusModel = (index) => octopusModels.forEach((m,i)=>m.setAttribute("visible", i===index));
 
-      document.getElementById("target-whale").addEventListener("targetFound", ()=>{
-        whaleDetected=true; if(!octopusDetected){currentAnimal="whale";factIndex=0;showFact();}
-        updateMenuVisibility();
+      // Eventos de targets (MINDAR style)
+      document.querySelector("#target-whale").addEventListener("targetFound", () => {
+        currentAnimal="whale"; factIndex=0; showFact(); updateUIForAnimal("whale");
       });
-      document.getElementById("target-whale").addEventListener("targetLost", ()=>{
-        whaleDetected=false; updateMenuVisibility();
-      });
-      document.getElementById("target-octopus").addEventListener("targetFound", ()=>{
-        octopusDetected=true; if(!whaleDetected){currentAnimal="octopus";factIndex=0;showFact();}
-        updateMenuVisibility();
-      });
-      document.getElementById("target-octopus").addEventListener("targetLost", ()=>{
-        octopusDetected=false; updateMenuVisibility();
-      });
+      document.querySelector("#target-whale").addEventListener("targetLost", hideUI);
 
+      document.querySelector("#target-octopus").addEventListener("targetFound", () => {
+        currentAnimal="octopus"; factIndex=0; showFact(); updateUIForAnimal("octopus");
+      });
+      document.querySelector("#target-octopus").addEventListener("targetLost", hideUI);
+
+      // Botones curiosidades
       document.querySelector("#btnNext").addEventListener("click", ()=>{
         if(currentAnimal){ factIndex=(factIndex+1)%facts[currentAnimal].length; showFact(); }
       });
@@ -208,11 +186,13 @@
         if(currentAnimal){ factIndex=(factIndex-1+facts[currentAnimal].length)%facts[currentAnimal].length; showFact(); }
       });
 
+      // Rotar imágenes de "apunta tu cámara"
       const scanImage = document.querySelector("#scan-image");
       const scanImages = ["./Ballena3.png","./OctupusO3.png"];
       let scanIndex=0;
       setInterval(()=>{scanIndex=(scanIndex+1)%scanImages.length; scanImage.src=scanImages[scanIndex];},2000);
 
+      // Eventos globales MindAR
       const sceneEl=document.querySelector("a-scene"); let arSystem;
       sceneEl.addEventListener("loaded",()=>{arSystem=sceneEl.systems["mindar-image-system"];});
       sceneEl.addEventListener("arReady",()=>console.log("AR listo ✅"));
