--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       }
       #scan-message img { display: block; margin: 10px auto 0 auto; max-width: 150px; border-radius: 8px; }
       #controls {
-        position: fixed; bottom: 125px; left: 50%; transform: translateX(-50%);
+         position: fixed; bottom: 125px; left: 50%; transform: translateX(-50%);
         z-index: 1000; display: flex; gap: 10px;
       }
       #controls button {
@@ -49,22 +49,22 @@
       }
       #model-switch {
         position: fixed; bottom: 200px; left: 50%; transform: translateX(-50%);
-        z-index: 1001; display: none; gap: 10px;
+         z-index: 1001; display: none; gap: 10px;
       }
       #model-switch button {
-        padding: 6px 12px; border: none; border-radius: 8px; background: #28a745;
+        padding: 6px 12px; border: none; border-radius: 8px; background: #1446eb;
         color: white; cursor: pointer;
       }
     </style>
   </head>
   <body>
-    <div id="scan-message">
-      Apunta tu cámara hacia las imágenes para comenzar
+       <div id="scan-message">
+      Bsuca alguno de estos targets  y apunta tu cámara hacia las imágenes para comenzar
       <img id="scan-image" src="./Ballena3.png" alt="Target a escanear">
     </div>
 
     <div id="menu">
-      <div id="fact-box">Selecciona un animal para ver curiosidades</div>
+       <!--<div id="fact-box">Selecciona un para ver curiosidades</div>-->
       <div>
         <button id="btnPrev">⬅ Anterior</button>
         <button id="btnNext">➡ Siguiente</button>
@@ -72,9 +72,9 @@
     </div>
 
     <div id="controls">
-      <button id="btnStart">▶ Start</button>
-      <button id="btnPause">⏸ Pause</button>
-      <button id="btnStop">⏹ Stop</button>
+      <button id="btnStart"> Start</button>
+      <button id="btnPause"> Pause</button>
+      <button id="btnStop"> Stop</button>
     </div>
 
     <div id="model-switch"></div>
@@ -87,17 +87,17 @@
       device-orientation-permission-ui="enabled: false"
     >
       <a-assets>
-        <!-- Ballenas -->
+        <!-- M_B -->
         <a-asset-item id="WhaleModel1" src="./WhaleO1.glb"></a-asset-item>
         <a-asset-item id="WhaleModel2" src="./WhaleO3.glb"></a-asset-item>
-        <!-- Pulpos -->
+        <!-- M _P -->
         <a-asset-item id="OctopusModel1" src="./Octopus.glb"></a-asset-item>
         <a-asset-item id="OctopusModel2" src="./Octopus(1).glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <!-- Ballena -->
+      <!-- Ballenas -->
       <a-entity id="target-whale" mindar-image-target="targetIndex: 0">
         <a-entity id="ballenaModel1" gltf-model="#WhaleModel1" 
           position="0 .2 0" rotation="0 90 0" scale="0.9 0.9 0.9" visible="true"
@@ -112,7 +112,7 @@
         </a-entity>
       </a-entity>
 
-      <!-- Pulpo -->
+      <!-- Pulpos -->
       <a-entity id="target-octopus" mindar-image-target="targetIndex: 1">
         <a-entity id="pulpoModel1" gltf-model="#OctopusModel1" 
           position="0 -0.25 0" rotation="0 90 0" scale="0.05 0.05 0.05" visible="true"
@@ -139,7 +139,7 @@
         document.querySelector("#ballenaModel2")
       ];
       const octopusModels = [
-        document.querySelector("#pulpoModel1"),
+         document.querySelector("#pulpoModel1"),
         document.querySelector("#pulpoModel2")
       ];
 
@@ -154,7 +154,7 @@
           "Los pulpos tienen tres corazones y sangre azul.",
            "Pueden exprimir su cuerpo para pasar por huecos del tamaño de una moneda",
           "Pueden cambiar de color y textura para camuflarse en menos de un segundo.",
-          "Dos tercios de sus neuronas están en los brazos."
+          "Dos tercios de sus neuronas están en los brazos"
         ]
       };
 
@@ -166,18 +166,18 @@
       function showFact() { if(currentAnimal) factBox.innerText = facts[currentAnimal][factIndex]; }
 
       function updateMenuVisibility() {
-        if ((whaleDetected && !octopusDetected) || (!whaleDetected && octopusDetected)) {
+         if ((whaleDetected && !octopusDetected) || (!whaleDetected && octopusDetected)) {
           menu.style.display = "block"; scanMessage.style.display = "none";
           if (whaleDetected) {
             modelSwitch.innerHTML = `
-              <button onclick="switchWhaleModel(0)">Ballena 1</button>
-              <button onclick="switchWhaleModel(1)">Ballena 2</button>
+           <button onclick="switchWhaleModel(0)">Ballena 1</button>
+           <button onclick="switchWhaleModel(1)">Ballena 2</button>
             `;
             modelSwitch.style.display = "flex";
           } else if (octopusDetected) {
             modelSwitch.innerHTML = `
-              <button onclick="switchOctopusModel(0)">Pulpo 1</button>
-              <button onclick="switchOctopusModel(1)">Pulpo 2</button>
+           <button onclick="switchOctopusModel(0)">Pulpo 1</button>
+           <button onclick="switchOctopusModel(1)">Pulpo 2</button>
             `;
             modelSwitch.style.display = "flex";
           }
@@ -185,28 +185,28 @@
           if(!whaleDetected && !octopusDetected) scanMessage.style.display = "block"; }
       }
 
-      window.switchWhaleModel = (index) => whaleModels.forEach((m,i)=>m.setAttribute("visible", i===index));
-      window.switchOctopusModel = (index) => octopusModels.forEach((m,i)=>m.setAttribute("visible", i===index));
+     window.switchWhaleModel = (index) => whaleModels.forEach((m,i)=>m.setAttribute("visible", i===index));
+  window.switchOctopusModel = (index) => octopusModels.forEach((m,i)=>m.setAttribute("visible", i===index));
 
-      document.getElementById("target-whale").addEventListener("targetFound", ()=>{
-        whaleDetected=true; if(!octopusDetected){currentAnimal="whale";factIndex=0;showFact();}
+    document.getElementById("target-whale").addEventListener("targetFound", ()=>{
+         whaleDetected=true; if(!octopusDetected){currentAnimal="whale";factIndex=0;showFact();}
         updateMenuVisibility();
       });
-      document.getElementById("target-whale").addEventListener("targetLost", ()=>{
+       document.getElementById("target-whale").addEventListener("targetLost", ()=>{
         whaleDetected=false; updateMenuVisibility();
       });
-      document.getElementById("target-octopus").addEventListener("targetFound", ()=>{
+       document.getElementById("target-octopus").addEventListener("targetFound", ()=>{
         octopusDetected=true; if(!whaleDetected){currentAnimal="octopus";factIndex=0;showFact();}
         updateMenuVisibility();
       });
-      document.getElementById("target-octopus").addEventListener("targetLost", ()=>{
+       document.getElementById("target-octopus").addEventListener("targetLost", ()=>{
         octopusDetected=false; updateMenuVisibility();
       });
 
       document.querySelector("#btnNext").addEventListener("click", ()=>{
-        if(currentAnimal){ factIndex=(factIndex+1)%facts[currentAnimal].length; showFact(); }
+          if(currentAnimal){ factIndex=(factIndex+1)%facts[currentAnimal].length; showFact(); }
       });
-      document.querySelector("#btnPrev").addEventListener("click", ()=>{
+       document.querySelector("#btnPrev").addEventListener("click", ()=>{
         if(currentAnimal){ factIndex=(factIndex-1+facts[currentAnimal].length)%facts[currentAnimal].length; showFact(); }
       });
 
@@ -216,9 +216,9 @@
       setInterval(()=>{scanIndex=(scanIndex+1)%scanImages.length; scanImage.src=scanImages[scanIndex];},2000);
 
       const sceneEl=document.querySelector("a-scene"); let arSystem;
-      sceneEl.addEventListener("loaded",()=>{arSystem=sceneEl.systems["mindar-image-system"];});
-      sceneEl.addEventListener("arReady",()=>console.log("AR listo"));
-      sceneEl.addEventListener("arError",(err)=>console.error("Error AR",err));
+         sceneEl.addEventListener("loaded",()=>{arSystem=sceneEl.systems["mindar-image-system"];});
+        sceneEl.addEventListener("arReady",()=>console.log("AR listo"));
+        sceneEl.addEventListener("arError",(err)=>console.error("Error AR",err));
 
       document.querySelector("#btnStart").addEventListener("click",()=>arSystem.start());
       document.querySelector("#btnPause").addEventListener("click",()=>arSystem.pause());
@@ -226,3 +226,4 @@
     </script>
   </body>
 </html>
+
